Fix weird horizontal scrolling issue

--- a/theme.scss
+++ b/theme.scss
@@ -14,6 +14,7 @@ $bg: #222;
 // General
 body {
 	background-color: $bg;
+	overflow-x: hidden;
 }
 
 a,
